# vallinks

./: Cargo.toml  mock.html  output.txt  readme.md
mock_files/: f.txt  style-desktop.css  style.css
src/: link.rs  link_parser.rs  main.rs  website.rs
