[package]
name = "broken-link-finder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
const_format = "0.2.25"
lazy_static = "1.4.0"
regex = "1.5.6"

tokio = { version = "1.19.2", features = ["full"] }
reqwest = "0.11.11"
scraper = "0.13.0"
futures = "0.3.21"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }